objects/Refund_Credit__c/Refund_Credit__c.object-meta.xml
<CustomObject>
    <description>This object is used for processing Refunds &amp; Credits for Customers.</description>
    <label>Refund/Credit</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Refund/Credit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Refund/Credits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>