objects/Refund_Credit__c/fields/Credit_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Credit_Transaction_Type__c</fullName>
    <label>Credit Transaction Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>