objects/Refund_Credit__c/fields/Customer_Detail__c.field-meta.xml
<CustomField>
    <fullName>Customer_Detail__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Customer Detail</label>
    <referenceTo>Customer_Detail__c</referenceTo>
    <relationshipLabel>Refund/Credits</relationshipLabel>
    <relationshipName>Refund_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>