objects/Refund_Credit__c/fields/Logged_In_User_Is_Me__c.field-meta.xml
<CustomField>
    <fullName>Logged_In_User_Is_Me__c</fullName>
    <description>This field is used to create list views and reports that will filter to &quot;My&quot; records for the logged in user.</description>
    <formula>IF( Next_Approver__r.Id = $User.Id,True,False )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logged In User Is Me</label>
    <type>Checkbox</type>
</CustomField>