objects/Refund_Credit__c/recordTypes/Refund.recordType-meta.xml
<RecordType>
    <fullName>Refund</fullName>
    <active>true</active>
    <description>Used to enter a refund for a customer</description>
    <label>Refund</label>
</RecordType>