objects/Refund_Credit__c/listViews/All_Refunds_Credits.listView-meta.xml
<ListView>
    <fullName>All_Refunds_Credits</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Status__c</columns>
    <columns>Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Refunds &amp; Credits</label>
</ListView>