objects/Refund_Credit__c/listViews/Refunds_Approved.listView-meta.xml
<ListView>
    <fullName>Refunds_Approved</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Customer_Detail__c</columns>
    <columns>Amount__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Refund_Credit__c.Refund_Approved</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Refunds Approved</label>
</ListView>