objects/Refund_Credit__c/listViews/Refunds_Pending_My_Approval.listView-meta.xml
<ListView>
    <fullName>Refunds_Pending_My_Approval</fullName>
    <columns>NAME</columns>
    <columns>Customer_Detail__c</columns>
    <columns>Amount__c</columns>
    <columns>Status__c</columns>
    <columns>Next_Approver__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Refund_Credit__c.Refund_In_Approval</value>
    </filters>
    <filters>
        <field>Logged_In_User_Is_Me__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Refunds Pending My Approval</label>
</ListView>